# esp32

./: .gitignore  CMakeLists.txt  gen_certs.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  main.c
main/certs/: ca.crt
main/common/: common.c  common.h
main/mqtt/: mqtt.c  mqtt.h
main/proto/: sample_batch.options  sample_batch.pb.c  sample_batch.pb.h  sample_batch.proto
main/prov/: prov.c  prov.h
main/sensors/: sensors.c  sensors.h
main/sntp/: sntp.c  sntp.h
main/ulp/: pulse_count.S  wake_up.S
